Add tags to l5-swagger
